Style: 모든 문자열 리소스화
- string.xml에 모든 문자열을 리소스화하여 추후 다국어 설정에 대비함

--- a/Oops-Android/app/src/main/res/layout/activity_login.xml
+++ b/Oops-Android/app/src/main/res/layout/activity_login.xml
@@ -43,7 +43,7 @@
                 android:layout_height="wrap_content"
                 android:background="@drawable/login_box_bg"
                 android:maxLines="1"
-                android:hint="ID(E-mail)"
+                android:hint="@string/login_email"
                 android:textColorHint="@color/Gray_300"
                 android:textSize="14sp"
                 android:textColor="@color/Main_500"
@@ -61,7 +61,7 @@
                 android:id="@+id/tv_login_email_alert"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="입력된 이메일이 올바르지 않아요"
+                android:text="@string/login_email_alert"
                 android:textSize="12sp"
                 android:textColor="@color/Red_Dark"
                 android:fontFamily="@font/pretendard_regular"
@@ -88,7 +88,7 @@
                     android:layout_height="wrap_content"
                     android:background="@drawable/login_box_bg"
                     android:maxLines="1"
-                    android:hint="Password"
+                    android:hint="@string/login_pwd"
                     android:textColorHint="@color/Gray_300"
                     android:textSize="14sp"
                     android:textColor="@color/Main_500"
@@ -116,7 +116,7 @@
                 android:id="@+id/tv_login_pwd_alert"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="비밀번호는 8자리 이상, 특수문자가 포함돼야 해요"
+                android:text="@string/login_pwd_alert"
                 android:textSize="12sp"
                 android:textColor="@color/Red_Dark"
                 android:fontFamily="@font/pretendard_regular"
@@ -132,7 +132,7 @@
             android:layout_height="wrap_content"
             android:background="@drawable/login_box_bg"
             android:backgroundTint="@color/Gray_100"
-            android:text="로그인"
+            android:text="@string/login_login"
             android:textSize="16sp"
             android:fontFamily="@font/pretendard_semibold"
             android:textColor="@color/Gray_400"
@@ -152,7 +152,7 @@
                 android:id="@+id/tv_login_id_pw_find"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="ID/PW 찾기"
+                android:text="@string/login_find"
                 android:textSize="14sp"
                 android:textColor="@color/Gray_300"
                 android:fontFamily="@font/pretendard_regular"
@@ -163,7 +163,7 @@
                 android:id="@+id/tv_login_signup"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="회원가입"
+                android:text="@string/login_signup"
                 android:textSize="14sp"
                 android:textColor="@color/Gray_300"
                 android:fontFamily="@font/pretendard_regular"/>
@@ -194,7 +194,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="더욱 쉽게 시작하세요"
+                android:text="@string/login_info"
                 android:textSize="14sp"
                 android:textColor="@color/Gray_400"
                 android:fontFamily="@font/pretendard_medium"
@@ -280,7 +280,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="가장 최근에 로그인했어요"
+                android:text="@string/login_recent"
                 android:textSize="14sp"
                 android:textColor="#111827"
                 android:fontFamily="@font/pretendard_medium"
@@ -326,7 +326,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="가장 최근에 로그인했어요"
+                android:text="@string/login_recent"
                 android:textSize="14sp"
                 android:textColor="#111827"
                 android:fontFamily="@font/pretendard_medium"
