--- a/Oops-Android/app/src/main/res/layout/activity_sign_up2.xml
+++ b/Oops-Android/app/src/main/res/layout/activity_sign_up2.xml
@@ -42,7 +42,7 @@
             <TextView
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:text="님,"
+                android:text="@string/signup_info_3"
                 android:fontFamily="@font/pretendard_bold"
                 android:textSize="32sp"
                 android:textColor="@color/Black"
@@ -55,7 +55,7 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="본격적으로 회원가입을 위한\n이메일을 입력해 주세요"
+            android:text="@string/signup_info_4"
             android:fontFamily="@font/pretendard_bold"
             android:textSize="30sp"
             android:textColor="@color/Black"
@@ -82,7 +82,7 @@
                 android:layout_height="wrap_content"
                 android:inputType="textEmailAddress"
                 android:maxLines="1"
-                android:hint="이메일 (ex: oops@naver.com)"
+                android:hint="@string/signup_email"
                 android:textColorHint="@color/Gray_300"
                 android:textSize="18sp"
                 android:textColor="@color/Black"
@@ -105,7 +105,7 @@
                 android:layout_gravity="end|center"
                 android:background="@drawable/all_radius_08"
                 android:backgroundTint="@color/Gray_200"
-                android:text="중복 확인"
+                android:text="@string/btn_overlap"
                 android:textColor="@color/Gray_400"
                 android:textSize="12sp"
                 android:fontFamily="@font/pretendard_bold"
@@ -152,7 +152,7 @@
                 android:inputType="textPassword"
                 android:maxLines="1"
                 android:maxLength="24"
-                android:hint="비밀번호"
+                android:hint="@string/signup_pwd"
                 android:textColorHint="@color/Gray_300"
                 android:textSize="18sp"
                 android:textColor="@color/Black"
@@ -212,7 +212,7 @@
                 android:inputType="textPassword"
                 android:maxLines="1"
                 android:maxLength="24"
-                android:hint="비밀번호 재확인"
+                android:hint="@string/signup_pwd_check"
                 android:textColorHint="@color/Gray_300"
                 android:textSize="18sp"
                 android:textColor="@color/Black"
