--- a/Oops-Android/app/src/main/res/layout/fragment_inventory.xml
+++ b/Oops-Android/app/src/main/res/layout/fragment_inventory.xml
@@ -43,7 +43,7 @@
                 android:paddingStart="10dp"
                 android:paddingEnd="10dp"
                 android:paddingBottom="6dp"
-                android:text="ALL"
+                android:text="@string/inventory_all"
                 android:textSize="25sp"
                 android:textColor="@color/White"
                 android:fontFamily="@font/pretendard_bold"
@@ -75,7 +75,7 @@
                 android:paddingEnd="16dp"
                 android:paddingBottom="8dp"
                 android:layout_marginTop="30dp"
-                android:text="Create"
+                android:text="@string/inventory_create"
                 android:textSize="20sp"
                 android:textColor="#80FFFFFF"
                 android:fontFamily="@font/pretendard_bold"
@@ -92,17 +92,6 @@
             android:layout_height="match_parent"
             android:layout_weight="3"
             android:clipToPadding="false">
-
-            <View
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:background="@drawable/inventory_stuff_box_background"
-                android:backgroundTint="#80FFFFFF"
-                android:layout_marginTop="20dp"
-                android:layout_marginStart="6dp"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintBottom_toBottomOf="parent"/>
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
@@ -145,7 +134,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="0dp"
                     android:orientation="vertical"
-                    android:visibility="invisible"
+                    android:visibility="visible"
                     android:scrollbars="none"
                     android:overScrollMode="never"
                     android:layout_marginTop="18dp"
@@ -169,7 +158,7 @@
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="위 버튼을 눌러 소지품을 담아 주세요"
+                    android:text="@string/inventory_info"
                     android:fontFamily="@font/pretendard_bold"
                     android:textSize="10sp"
                     android:textColor="@color/Main_200"
@@ -181,7 +170,4 @@
             </androidx.constraintlayout.widget.ConstraintLayout>
         </androidx.constraintlayout.widget.ConstraintLayout>
     </LinearLayout>
-
-
-
 </LinearLayout>
