--- a/Oops-Android/app/src/main/res/layout/fragment_sting.xml
+++ b/Oops-Android/app/src/main/res/layout/fragment_sting.xml
@@ -449,7 +449,7 @@
         android:id="@+id/btn_sting_friends"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="친구 목록"
+        android:text="@string/sting_friends"
         android:textColor="@color/White"
         android:fontFamily="@font/pretendard_bold"
         android:textSize="20sp"
