Feat: 알림 동의&비동의 클릭 이벤트 구현
- 알림 미동의 시 -> 다시 확인하는 팝업 -> 동의/미동의 선택 -> 동의&비동의 완료 팝업 띄우기
- 알림 동의 시 -> 동의 완료 팝업 띄우기

--- a/Oops-Android/app/src/main/res/layout/activity_sign_up2.xml
+++ b/Oops-Android/app/src/main/res/layout/activity_sign_up2.xml
@@ -9,6 +9,7 @@
     android:paddingStart="16dp"
     android:paddingEnd="16dp"
     android:layout_weight="10"
+    android:id="@+id/lLayout_sign_up_2_top"
     android:background="@color/White"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".ui.Login.SignUp2Activity">
