Style: 월간 캘린더 요일 폰트 변경
- bold -> regular

--- a/Oops-Android/app/src/main/res/values/colors.xml
+++ b/Oops-Android/app/src/main/res/values/colors.xml
@@ -24,7 +24,8 @@
     <color name="Gray_100">#F3F4F6</color>
     <color name="Gray_50">#F9FAFB</color>
     <!-- Other Color -->
-
+    <color name="Black_1C">#1C1C1C</color>
+    <color name="Black_70">#707070</color>
     <!-- 투명 색상 -->
     <color name="transparent">#00ff0000</color>
 </resources>
