--- a/Oops-Android/app/src/main/res/values/themes.xml
+++ b/Oops-Android/app/src/main/res/values/themes.xml
@@ -46,11 +46,17 @@
         <item name="android:textSize">14sp</item>
         <item name="android:fontFamily">@font/pretendard_bold</item>
     </style>
-    <!-- 요일 -->
+    <!-- 요일(일주일) -->
     <style name="WeekTextStyle">
-        <item name="android:textColor">#707070</item>
+        <item name="android:textColor">@color/Black_70</item>
         <item name="android:textSize">12sp</item>
         <item name="android:fontFamily">@font/pretendard_bold</item>
+    </style>
+    <!-- 요일(월간) -->
+    <style name="WeekTextStyle2">
+        <item name="android:textColor">@color/Black_70</item>
+        <item name="android:textSize">12sp</item>
+        <item name="android:fontFamily">@font/pretendard_regular</item>
     </style>
     <!-- 날짜 -->
     <style name="DateTextStyle">
