Refactor: EditText의 커서 색상에 따른 스타일 이름 변경

--- a/Oops-Android/app/src/main/res/layout/activity_sign_up.xml
+++ b/Oops-Android/app/src/main/res/layout/activity_sign_up.xml
@@ -63,7 +63,7 @@
                 android:fontFamily="@font/pretendard_regular"
                 android:imeOptions="actionDone"
                 android:backgroundTint="@color/Gray_300"
-                android:theme="@style/SignUpEditTextStyle"
+                android:theme="@style/GrayEditTextStyle"
                 android:focusableInTouchMode="true"
                 android:focusable="true"
                 android:includeFontPadding="true"
