--- a/Oops-Android/app/src/main/res/layout/activity_sign_up2.xml
+++ b/Oops-Android/app/src/main/res/layout/activity_sign_up2.xml
@@ -89,7 +89,7 @@
                 android:textColor="@color/Black"
                 android:fontFamily="@font/pretendard_regular"
                 android:backgroundTint="@color/Gray_300"
-                android:theme="@style/SignUpEditTextStyle"
+                android:theme="@style/GrayEditTextStyle"
                 android:focusableInTouchMode="true"
                 android:focusable="true"
                 android:includeFontPadding="true"
@@ -159,7 +159,7 @@
                 android:textColor="@color/Black"
                 android:fontFamily="@font/pretendard_regular"
                 android:backgroundTint="@color/Gray_300"
-                android:theme="@style/SignUpEditTextStyle"
+                android:theme="@style/GrayEditTextStyle"
                 android:focusableInTouchMode="true"
                 android:focusable="true"
                 android:includeFontPadding="true"
@@ -219,7 +219,7 @@
                 android:textColor="@color/Black"
                 android:fontFamily="@font/pretendard_regular"
                 android:backgroundTint="@color/Gray_300"
-                android:theme="@style/SignUpEditTextStyle"
+                android:theme="@style/GrayEditTextStyle"
                 android:focusableInTouchMode="true"
                 android:focusable="true"
                 android:includeFontPadding="true"
