--- a/Oops-Android/app/src/main/res/values/themes.xml
+++ b/Oops-Android/app/src/main/res/values/themes.xml
@@ -32,12 +32,12 @@
         <item name="android:navigationBarColor">@color/White</item>
         <item name="android:windowLightStatusBar">true</item>
     </style>
-    <!-- 회원가입 EditText 스타일 -->
-    <style name="SignUpEditTextStyle" parent="Theme.AppCompat.DayNight.NoActionBar">
+    <!-- 커서 색이 회색인 EditText 스타일 -->
+    <style name="GrayEditTextStyle" parent="Theme.AppCompat.DayNight.NoActionBar">
         <item name="colorAccent">#33BDBDBD</item>
     </style>
-    <!-- 로그인 EditText 스타일 -->
-    <style name="LoginEditTextStyle" parent="Theme.AppCompat.DayNight.NoActionBar">
+    <!-- 커서 색이 보라색인 EditText 스타일 -->
+    <style name="ColorEditTextStyle" parent="Theme.AppCompat.DayNight.NoActionBar">
         <item name="colorAccent">@color/Main_500</item>
     </style>
     <!-- 월간 캘린더 텍스트 스타일 -->
