--- a/Oops-Android/app/src/main/res/layout/fragment_friends.xml
+++ b/Oops-Android/app/src/main/res/layout/fragment_friends.xml
@@ -15,22 +15,24 @@
     <EditText
         android:id="@+id/edt_friends_search_box"
         android:layout_width="match_parent"
-        android:layout_height="48dp"
+        android:layout_height="wrap_content"
         android:hint="@string/friends_nickname"
         android:textColorHint="@color/Gray_400"
         android:fontFamily="@font/pretendard_regular"
         android:textSize="16sp"
         android:textColor="#111827"
+        android:maxLines="1"
         android:background="@drawable/all_radius_50"
         android:backgroundTint="@color/Gray_100"
         android:drawableStart="@drawable/ic_search_32"
+        android:paddingTop="14dp"
         android:paddingStart="24dp"
+        android:paddingEnd="24dp"
+        android:paddingBottom="14dp"
         android:drawablePadding="16dp"
         android:layout_marginTop="8dp"
         android:layout_marginStart="16dp"
-        android:layout_marginEnd="16dp"
-        android:paddingTop="15dp"
-        android:paddingBottom="15dp"/>
+        android:layout_marginEnd="16dp"/>
 
     <ScrollView
         android:layout_width="match_parent"
@@ -43,6 +45,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
+            android:layout_marginTop="12dp"
             android:layout_marginStart="16dp"
             android:layout_marginEnd="16dp">
             <TextView
@@ -50,9 +53,8 @@
                 android:layout_height="wrap_content"
                 android:text="@string/friends_new"
                 android:fontFamily="@font/pretendard_bold"
-                android:textSize="20sp"
-                android:textColor="@color/Black"
-                android:layout_marginTop="12dp"/>
+                android:textSize="18sp"
+                android:textColor="@color/Black"/>
 
             <!-- 새로운 친구 목록 -->
             <androidx.recyclerview.widget.RecyclerView
