--- a/Oops-Android/app/src/main/res/layout/item_friends_box_rv.xml
+++ b/Oops-Android/app/src/main/res/layout/item_friends_box_rv.xml
@@ -1,12 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!-- 친구 목록 화면의 친구 리스트 박스1 -->
-<androidx.constraintlayout.widget.ConstraintLayout
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:orientation="horizontal"
     android:background="@drawable/all_radius_12"
-    android:layout_marginTop="12dp">
+    android:layout_weight="7"
+    android:layout_marginTop="12dp"
+    android:paddingTop="12dp"
+    android:paddingStart="18dp"
+    android:paddingEnd="18dp"
+    android:paddingBottom="12dp">
 
     <!-- 프로필 사진 -->
     <androidx.cardview.widget.CardView
@@ -15,13 +21,8 @@
         android:layout_height="wrap_content"
         app:cardCornerRadius="100dp"
         android:scaleType="centerCrop"
-        app:cardElevation="@null"
-        android:layout_marginTop="12dp"
-        android:layout_marginStart="24dp"
-        android:layout_marginBottom="12dp"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent">
+        android:layout_gravity="center"
+        app:cardElevation="@null">
         <ImageView
             android:id="@+id/iv_friends_profile"
             android:layout_width="50dp"
@@ -34,103 +35,96 @@
         android:id="@+id/tv_friends_name"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_weight="1"
         android:textColor="@color/Black"
-        android:textSize="20sp"
+        android:textSize="18sp"
         android:fontFamily="@font/pretendard_bold"
+        android:ems="6"
         android:maxLines="1"
         android:ellipsize="end"
-        android:layout_marginStart="16dp"
-        android:layout_marginEnd="16dp"
-        app:layout_constraintTop_toTopOf="@id/cv_friends_profile"
-        app:layout_constraintStart_toEndOf="@id/cv_friends_profile"
-        app:layout_constraintEnd_toStartOf="@id/lLayout_friends_btn"
-        app:layout_constraintBottom_toBottomOf="@id/cv_friends_profile"/>
-
-    <!-- 친구 신청 -->
-    <TextView
-        android:id="@+id/tv_friends_add"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:background="@drawable/all_radius_50"
-        android:backgroundTint="@color/Main_500"
-        android:text="친구 신청"
-        android:textSize="14sp"
-        android:textColor="@color/White"
-        android:fontFamily="@font/pretendard_bold"
-        android:paddingTop="4dp"
-        android:paddingStart="16dp"
-        android:paddingEnd="16dp"
-        android:paddingBottom="4dp"
-        android:layout_marginEnd="24dp"
-        android:visibility="invisible"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"/>
-
-    <!-- 대기 중 -->
-    <TextView
-        android:id="@+id/tv_friends_wait"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:background="@drawable/all_radius_50"
-        android:backgroundTint="@color/Yellow_Light"
-        android:text="대기중"
-        android:textSize="14sp"
-        android:textColor="@color/Yellow_Dark"
-        android:fontFamily="@font/pretendard_bold"
-        android:paddingTop="4dp"
-        android:paddingStart="16dp"
-        android:paddingEnd="16dp"
-        android:paddingBottom="4dp"
-        android:layout_marginEnd="24dp"
-        android:visibility="invisible"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"/>
+        android:layout_marginStart="12dp"
+        android:layout_marginEnd="12dp"
+        android:layout_gravity="center"/>
 
     <LinearLayout
-        android:id="@+id/lLayout_friends_btn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:layout_marginEnd="24dp"
-        android:visibility="invisible"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent">
+        android:layout_gravity="center|end"
+        android:gravity="center|end">
 
-        <!-- 수락 -->
+        <!-- 친구 신청 -->
         <TextView
-            android:id="@+id/tv_friends_confirm"
+            android:id="@+id/tv_friends_add"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="@drawable/all_radius_50"
             android:backgroundTint="@color/Main_500"
-            android:text="수락"
+            android:visibility="gone"
+            android:text="@string/friends_add"
             android:textSize="14sp"
             android:textColor="@color/White"
             android:fontFamily="@font/pretendard_bold"
             android:paddingTop="4dp"
             android:paddingStart="16dp"
             android:paddingEnd="16dp"
-            android:paddingBottom="4dp"
-            android:layout_marginEnd="4dp"/>
+            android:paddingBottom="4dp"/>
 
-        <!-- 거절 -->
+        <!-- 대기 중 -->
         <TextView
-            android:id="@+id/tv_friends_refuse"
+            android:id="@+id/tv_friends_wait"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="@drawable/all_radius_50"
-            android:backgroundTint="@color/Main_50"
-            android:text="거절"
+            android:backgroundTint="@color/Yellow_Light"
+            android:visibility="gone"
+            android:text="@string/friends_wait"
             android:textSize="14sp"
-            android:textColor="@color/Main_500"
+            android:textColor="@color/Yellow_Dark"
             android:fontFamily="@font/pretendard_bold"
             android:paddingTop="4dp"
             android:paddingStart="16dp"
             android:paddingEnd="16dp"
             android:paddingBottom="4dp"/>
-    </LinearLayout>
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+        <LinearLayout
+            android:id="@+id/lLayout_friends_btn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <!-- 수락 -->
+            <TextView
+                android:id="@+id/tv_friends_confirm"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@drawable/all_radius_50"
+                android:backgroundTint="@color/Main_500"
+                android:text="@string/friends_confirm"
+                android:textSize="14sp"
+                android:textColor="@color/White"
+                android:fontFamily="@font/pretendard_bold"
+                android:paddingTop="4dp"
+                android:paddingStart="16dp"
+                android:paddingEnd="16dp"
+                android:paddingBottom="4dp"
+                android:layout_marginEnd="4dp"/>
+
+            <!-- 거절 -->
+            <TextView
+                android:id="@+id/tv_friends_refuse"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@drawable/all_radius_50"
+                android:backgroundTint="@color/Main_50"
+                android:text="@string/friends_refuse"
+                android:textSize="14sp"
+                android:textColor="@color/Main_500"
+                android:fontFamily="@font/pretendard_bold"
+                android:paddingTop="4dp"
+                android:paddingStart="16dp"
+                android:paddingEnd="16dp"
+                android:paddingBottom="4dp"/>
+        </LinearLayout>
+    </LinearLayout>
+</LinearLayout>
