--- a/Oops-Android/app/src/main/res/layout/item_friends_box_rv_2.xml
+++ b/Oops-Android/app/src/main/res/layout/item_friends_box_rv_2.xml
@@ -10,14 +10,14 @@
 
     <!-- 프로필 사진 -->
     <androidx.cardview.widget.CardView
-        android:id="@+id/cv_friends_profile"
+        android:id="@+id/cv_friends_profile_2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:cardCornerRadius="100dp"
         android:scaleType="centerCrop"
         app:cardElevation="@null"
         android:layout_marginTop="12dp"
-        android:layout_marginStart="24dp"
+        android:layout_marginStart="18dp"
         android:layout_marginBottom="12dp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -31,18 +31,19 @@
 
     <!-- 이름 -->
     <TextView
-        android:id="@+id/tv_friends_name"
+        android:id="@+id/tv_friends_name_2"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:textColor="@color/Black"
-        android:textSize="20sp"
+        android:textSize="18sp"
         android:fontFamily="@font/pretendard_bold"
+        android:ems="6"
         android:maxLines="1"
         android:ellipsize="end"
-        android:layout_marginStart="16dp"
-        android:layout_marginEnd="16dp"
-        app:layout_constraintTop_toTopOf="@id/cv_friends_profile"
-        app:layout_constraintStart_toEndOf="@id/cv_friends_profile"
+        android:layout_marginStart="12dp"
+        android:layout_marginEnd="12dp"
+        app:layout_constraintTop_toTopOf="@id/cv_friends_profile_2"
+        app:layout_constraintStart_toEndOf="@id/cv_friends_profile_2"
         app:layout_constraintEnd_toStartOf="@id/iBtn_friends_sting"
         app:layout_constraintTop_toBottomOf="@id/tv_friends_delete"/>
 
@@ -51,24 +52,23 @@
         android:id="@+id/tv_friends_delete"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="친구 끊기"
+        android:text="@string/friend_delete"
         android:textColor="@color/Gray_500"
         android:textSize="12sp"
         android:fontFamily="@font/pretendard_regular"
-        android:maxLines="1"
-        android:ellipsize="end"
-        android:layout_marginStart="16dp"
-        android:layout_marginEnd="16dp"
-        app:layout_constraintTop_toBottomOf="@id/tv_friends_name"
-        app:layout_constraintStart_toEndOf="@id/cv_friends_profile"
-        app:layout_constraintBottom_toBottomOf="@id/cv_friends_profile"/>
+        android:layout_marginStart="12dp"
+        android:layout_marginEnd="12dp"
+        app:layout_constraintTop_toBottomOf="@id/tv_friends_name_2"
+        app:layout_constraintStart_toEndOf="@id/cv_friends_profile_2"
+        app:layout_constraintBottom_toBottomOf="@id/cv_friends_profile_2"/>
 
+    <!-- 콕콕 찌르기 버튼 -->
     <ImageButton
         android:id="@+id/iBtn_friends_sting"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="@drawable/ic_sting_42"
-        android:layout_marginEnd="24dp"
+        android:layout_marginEnd="18dp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"/>
