--- a/Oops-Android/app/src/main/res/layout/fragment_inventory.xml
+++ b/Oops-Android/app/src/main/res/layout/fragment_inventory.xml
@@ -79,7 +79,7 @@
                 android:textSize="20sp"
                 android:textColor="#80FFFFFF"
                 android:fontFamily="@font/pretendard_bold"
-                android:drawableStart="@drawable/ic_add_24"
+                android:drawableStart="@drawable/ic_inventory_add_24"
                 android:background="@drawable/inventory_category_background"
                 android:backgroundTint="#80FFFFFF"
                 app:layout_constraintTop_toBottomOf="@id/rv_inventory_category"
