--- a/Oops-Android/app/src/main/res/values/colors.xml
+++ b/Oops-Android/app/src/main/res/values/colors.xml
@@ -17,6 +17,7 @@
     <color name="Red_Medium">#F58D55</color>
     <color name="Red_Light">#FCE2D4</color>
     <!-- GrayScale -->
+    <color name="Gray_900">#111827</color>
     <color name="Gray_500">#6B7280</color>
     <color name="Gray_400">#9CA3AF</color>
     <color name="Gray_300">#D1D5DB</color>
