--- a/Oops-Android/app/src/main/res/values/themes.xml
+++ b/Oops-Android/app/src/main/res/values/themes.xml
@@ -124,4 +124,12 @@
         <item name="bottomSheetStyle">@style/BottomSheetStyle</item>
         <item name="android:windowIsFloating">false</item>
     </style>
+    <!-- Time Picker 스타일 -->
+    <style name="TimePickerTheme" parent="android:Widget.Material.Light.TimePicker">
+        <item name="android:timePickerMode">spinner</item>
+        <item name="android:fontFamily">@font/pretendard_medium</item>
+        <item name="android:textColorPrimary">@color/Gray_900</item>
+        <item name="colorControlNormal">@color/transparent</item>
+        <item name="android:textSize">16sp</item>
+    </style>
 </resources>
