--- a/Oops-Android/app/src/main/res/layout/fragment_weekly.xml
+++ b/Oops-Android/app/src/main/res/layout/fragment_weekly.xml
@@ -241,8 +241,9 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="12dp"
-                android:paddingStart="16dp"
-                android:paddingEnd="4dp"
+                android:clipToPadding="false"
+                android:paddingStart="4dp"
+                android:paddingEnd="16dp"
                 android:overScrollMode="never"
                 android:nestedScrollingEnabled="false"
                 android:orientation="horizontal"
