--- a/Oops-Android/app/src/main/res/layout/item_home_stuff.xml
+++ b/Oops-Android/app/src/main/res/layout/item_home_stuff.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!-- 홈 화면의 챙겨야 할 것 - 소지품 -->
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/cLayout_home_stuff_top"
     android:layout_width="88dp"
     android:layout_height="112dp"
@@ -8,7 +9,7 @@
     android:paddingStart="6dp"
     android:paddingEnd="6dp"
     android:paddingBottom="7dp"
-    android:layout_marginEnd="12dp"
+    android:layout_marginStart="12dp"
     android:background="@drawable/all_radius_08">
 
     <!-- 소지품 사진 -->
