--- a/Oops-Android/app/src/main/res/layout/dialog_push_alert_agree.xml
+++ b/Oops-Android/app/src/main/res/layout/dialog_push_alert_agree.xml
@@ -3,7 +3,7 @@
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
-    android:layout_width="247dp"
+    android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:background="@drawable/all_radius_12"
     android:padding="16dp">
@@ -11,7 +11,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/popup_push_alert_agree"
-        android:textSize="16sp"
+        android:textSize="20sp"
         android:textColor="@color/Black"
         android:fontFamily="@font/pretendard_bold"
         android:gravity="center"/>
@@ -20,7 +20,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/popup_push_alert_agree_info_1"
-        android:textSize="10sp"
+        android:textSize="14sp"
         android:textColor="@color/Gray_400"
         android:fontFamily="@font/pretendard_medium"
         android:gravity="center"
@@ -31,7 +31,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="{yyyy}년 {mm}월 {dd}일 {hh}시 {mm}분"
-        android:textSize="10sp"
+        android:textSize="14sp"
         android:textColor="@color/Gray_400"
         android:fontFamily="@font/pretendard_medium"
         android:gravity="center"
@@ -41,14 +41,14 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/popup_push_alert_agree_info_2"
-        android:textSize="10sp"
+        android:textSize="14sp"
         android:textColor="@color/Gray_400"
         android:fontFamily="@font/pretendard_medium"
         android:gravity="center"/>
 
     <Button
         android:id="@+id/btn_popup_push_alert_agree_confirm"
-        android:layout_width="match_parent"
+        android:layout_width="264dp"
         android:layout_height="33dp"
         style="@style/PopUpButtonEnableStyle"
         android:text="@string/popup_confirm"
