--- a/Oops-Android/app/src/main/res/layout/fragment_todo.xml
+++ b/Oops-Android/app/src/main/res/layout/fragment_todo.xml
@@ -184,7 +184,7 @@
 
             <!-- 오늘 할 일 추가 버튼 -->
             <ImageButton
-                android:id="@+id/btn_todo"
+                android:id="@+id/iBtn_todo"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@drawable/all_radius_12"
@@ -231,7 +231,7 @@
                 android:rowCount="2"
                 android:useDefaultMargins="true">
                 <Button
-                    android:id="@+id/btn_tag_1"
+                    android:id="@+id/btn_tag_daily"
                     android:layout_width="0dp"
                     android:layout_height="37dp"
                     android:layout_rowWeight="0"
@@ -243,7 +243,7 @@
                     android:textColor="@color/Gray_400"
                     android:textSize="14sp" />
                 <Button
-                    android:id="@+id/btn_tag_2"
+                    android:id="@+id/btn_tag_job"
                     android:layout_width="0dp"
                     android:layout_height="37dp"
                     android:layout_rowWeight="0"
@@ -255,7 +255,7 @@
                     android:textColor="@color/Gray_400"
                     android:textSize="14sp" />
                 <Button
-                    android:id="@+id/btn_tag_3"
+                    android:id="@+id/btn_tag_hobby"
                     android:layout_width="0dp"
                     android:layout_height="37dp"
                     android:layout_rowWeight="0"
@@ -267,7 +267,7 @@
                     android:textColor="@color/Gray_400"
                     android:textSize="14sp" />
                 <Button
-                    android:id="@+id/btn_tag_4"
+                    android:id="@+id/btn_tag_study"
                     android:layout_width="0dp"
                     android:layout_height="37dp"
                     android:layout_rowWeight="0"
@@ -279,7 +279,7 @@
                     android:textColor="@color/Gray_400"
                     android:textSize="14sp" />
                 <Button
-                    android:id="@+id/btn_tag_5"
+                    android:id="@+id/btn_tag_sports"
                     android:layout_width="0dp"
                     android:layout_height="37dp"
                     android:layout_rowWeight="0"
@@ -291,7 +291,7 @@
                     android:textColor="@color/Gray_400"
                     android:textSize="14sp" />
                 <Button
-                    android:id="@+id/btn_tag_6"
+                    android:id="@+id/btn_tag_reading"
                     android:layout_width="0dp"
                     android:layout_height="37dp"
                     android:layout_rowWeight="0"
@@ -303,7 +303,7 @@
                     android:textColor="@color/Gray_400"
                     android:textSize="14sp" />
                 <Button
-                    android:id="@+id/btn_tag_7"
+                    android:id="@+id/btn_tag_travel"
                     android:layout_width="0dp"
                     android:layout_height="37dp"
                     android:layout_rowWeight="0"
@@ -315,7 +315,7 @@
                     android:textColor="@color/Gray_400"
                     android:textSize="14sp" />
                 <Button
-                    android:id="@+id/btn_tag_8"
+                    android:id="@+id/btn_tag_shopping"
                     android:layout_width="0dp"
                     android:layout_height="37dp"
                     android:layout_rowWeight="0"
@@ -393,7 +393,7 @@
                 android:orientation="horizontal"
                 android:useDefaultMargins="true">
                 <Button
-                    android:id="@+id/btn_remind_1"
+                    android:id="@+id/btn_remind_no"
                     android:layout_width="0dp"
                     android:layout_height="37dp"
                     android:layout_rowWeight="0"
@@ -405,7 +405,7 @@
                     android:textColor="@color/Gray_400"
                     android:textSize="14sp" />
                 <Button
-                    android:id="@+id/btn_remind_2"
+                    android:id="@+id/btn_remind_5m"
                     android:layout_width="0dp"
                     android:layout_height="37dp"
                     android:layout_rowWeight="0"
@@ -417,7 +417,7 @@
                     android:textColor="@color/Gray_400"
                     android:textSize="14sp" />
                 <Button
-                    android:id="@+id/btn_remind_3"
+                    android:id="@+id/btn_remind_30m"
                     android:layout_width="0dp"
                     android:layout_height="37dp"
                     android:layout_rowWeight="0"
@@ -429,7 +429,7 @@
                     android:textColor="@color/Gray_400"
                     android:textSize="14sp" />
                 <Button
-                    android:id="@+id/btn_remind_4"
+                    android:id="@+id/btn_remind_1h"
                     android:layout_width="0dp"
                     android:layout_height="37dp"
                     android:layout_rowWeight="0"
@@ -441,7 +441,7 @@
                     android:textColor="@color/Gray_400"
                     android:textSize="14sp" />
                 <Button
-                    android:id="@+id/btn_remind_5"
+                    android:id="@+id/btn_remind_1d"
                     android:layout_width="0dp"
                     android:layout_height="37dp"
                     android:layout_rowWeight="0"
@@ -456,15 +456,47 @@
 
             <!-- 등록하기 버튼 -->
             <Button
-                android:id="@+id/todo_create"
+                android:id="@+id/btn_todo_create"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:visibility="gone"
                 style="@style/WideButtonDisableStyle"
+                android:backgroundTint="@color/Gray_100"
                 android:text="@string/button_create"
                 android:layout_marginTop="40dp"
                 android:layout_marginStart="16dp"
                 android:layout_marginEnd="16dp"
                 android:layout_marginBottom="40dp"/>
+
+            <!-- 수정 화면에 나타 날 버튼 -->
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:visibility="gone"
+                android:layout_marginTop="40dp"
+                android:layout_marginStart="16dp"
+                android:layout_marginEnd="16dp"
+                android:layout_marginBottom="40dp">
+                <!-- 삭제하기 버튼 -->
+                <Button
+                    android:id="@+id/btn_todo_delete"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    style="@style/WideButtonDisableStyle"
+                    android:backgroundTint="@color/Gray_100"
+                    android:text="@string/button_delete" />
+
+                <!-- 수정하기 버튼 -->
+                <Button
+                    android:id="@+id/btn_todo_edit"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    style="@style/WideButtonDisableStyle"
+                    android:backgroundTint="@color/Gray_100"
+                    android:text="@string/button_edit"
+                    android:layout_marginTop="16dp"/>
+            </LinearLayout>
         </LinearLayout>
     </ScrollView>
 </LinearLayout>
