--- a/Oops-Android/app/src/main/res/values/themes.xml
+++ b/Oops-Android/app/src/main/res/values/themes.xml
@@ -80,9 +80,11 @@
         <item name="android:textColor">@color/Gray_400</item>
         <item name="android:textSize">20sp</item>
         <item name="android:fontFamily">@font/pretendard_bold</item>
-        <item name="android:layout_marginTop">16dp</item>
-        <item name="android:layout_marginBottom">16dp</item>
         <item name="android:gravity">center</item>
+        <item name="android:minWidth">0dp</item>
+        <item name="android:minHeight">0dp</item>
+        <item name="android:paddingTop">16dp</item>
+        <item name="android:paddingBottom">16dp</item>
         <item name="android:background">@drawable/wide_btn_bg</item>
         <item name="android:backgroundTint">@color/Gray_200</item>
         <item name="android:outlineProvider">none</item>
