Feat: 일정 화면의 관련 태그, 알림 시간 선택 이벤트 구현
- 관련 태그: 최대 3개 선택 가능, 다른 태그를 원할 시 이전에 선택했던 태그를 선택 해제한 후 다른 태그를 선택해야 함
- 알림 시간: 최대 4개 선택 가능, 없음 클릭 시 이전에 선택했던 알림 시간 모두 해제

--- a/Oops-Android/app/src/main/res/drawable/todo_bg_unselected.xml
+++ b/Oops-Android/app/src/main/res/drawable/todo_bg_unselected.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!-- 일정 추가 화면의 관련 태그 박스 -->
+<!-- 일정 추가 화면의 관련 태그 박스 - default -->
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <corners android:radius="30dp"/>
     <solid android:color="@color/Gray_50"/>
