Feat: 홈 화면에서 일정 이름 수정하기 이벤트 구현
- popupwindow 에서 edit을 클릭한 경우, 일정 이름 수정 가능
- 사용자가 화면 밖을 터치하거나, 키보드의 완료버튼을 터치한 경우 입력한 변경사항 적용

--- a/Oops-Android/app/src/main/res/layout/item_home_todo.xml
+++ b/Oops-Android/app/src/main/res/layout/item_home_todo.xml
@@ -28,11 +28,32 @@
         android:id="@+id/tv_home_todo_name"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:textColor="#1C1C1C"
+        android:textColor="@color/Black_1C"
         android:textSize="14sp"
         android:fontFamily="@font/pretendard_medium"
         android:ellipsize="end"
         android:maxLines="1"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toEndOf="@id/iBtn_home_todo_complete"
+        app:layout_constraintEnd_toStartOf="@id/iv_home_todo_edit"
+        app:layout_constraintBottom_toBottomOf="parent"/>
+
+    <!-- 할 일 이름 입력 필드 -->
+    <EditText
+        android:id="@+id/edt_home_todo_name"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:textColor="@color/Black_1C"
+        android:textSize="14sp"
+        android:fontFamily="@font/pretendard_medium"
+        android:ellipsize="end"
+        android:maxLines="1"
+        android:inputType="text"
+        android:imeOptions="actionDone"
+        android:background="@null"
+        android:visibility="invisible"
         android:layout_marginStart="8dp"
         android:layout_marginEnd="8dp"
         app:layout_constraintTop_toTopOf="parent"
