--- a/Oops-Android/app/src/main/res/layout/item_friends_box_rv.xml
+++ b/Oops-Android/app/src/main/res/layout/item_friends_box_rv.xml
@@ -91,7 +91,8 @@
             android:id="@+id/lLayout_friends_btn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:orientation="horizontal">
+            android:orientation="horizontal"
+            android:visibility="gone">
 
             <!-- 수락 -->
             <TextView
