--- a/Oops-Android/app/src/main/res/layout/item_friends_box_rv_2.xml
+++ b/Oops-Android/app/src/main/res/layout/item_friends_box_rv_2.xml
@@ -23,7 +23,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintBottom_toBottomOf="parent">
         <ImageView
-            android:id="@+id/iv_friends_profile"
+            android:id="@+id/iv_friends_profile_2"
             android:layout_width="50dp"
             android:layout_height="50dp"
             android:src="@drawable/ic_friends_profile_default_50"/>
