Feat: 마이페이지, 공지사항, 공지사항 상세 화면 UI 구현
- UI 디자인 구현 완료
- 버튼 클릭 이벤트(네비게이션) 구현 완료

--- a/Oops-Android/app/src/main/res/navigation/nav_graph.xml
+++ b/Oops-Android/app/src/main/res/navigation/nav_graph.xml
@@ -85,5 +85,33 @@
         <action
             android:id="@+id/action_myPageFrm_to_loginActivity"
             app:destination="@id/loginActivity"/>
+        <action
+            android:id="@+id/action_myPageFrm_to_noticeFrm"
+            app:destination="@id/noticeFragment"/>
+    </fragment>
+
+    <!-- 공지사항 -->
+    <fragment
+        android:id="@+id/noticeFragment"
+        android:name="com.example.oops_android.ui.MyPage.NoticeFragment"
+        android:label="frm_notice"
+        tools:layout="@layout/fragment_notice">
+        <action
+            android:id="@+id/action_noticeFrm_to_myPageFrm"
+            app:destination="@id/myPageFragment"/>
+        <action
+            android:id="@+id/action_noticeFrm_to_noticeDetailFrm"
+            app:destination="@id/noticeDetailFragment"/>
+    </fragment>
+
+    <!-- 공지사항 상세 -->
+    <fragment
+        android:id="@+id/noticeDetailFragment"
+        android:name="com.example.oops_android.ui.MyPage.NoticeDetailFragment"
+        android:label="frm_notice_detail"
+        tools:layout="@layout/fragment_notice_detail">
+        <action
+            android:id="@+id/action_noticeDetailFrm_to_noticeFrm"
+            app:destination="@id/noticeFragment"/>
     </fragment>
 </navigation>
