--- a/Oops-Android/app/src/main/res/layout/fragment_my_page.xml
+++ b/Oops-Android/app/src/main/res/layout/fragment_my_page.xml
@@ -1,16 +1,311 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
+<!-- 마이페이지 -->
+<LinearLayout
     android:id="@+id/myPage"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.MyPage.MyPageFragment">
+    android:orientation="vertical"
+    tools:context=".ui.MyPage.MyPageFragment"
+    android:background="@color/White"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="mypagefragment" />
+        android:layout_height="wrap_content"
+        android:scrollbars="none">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+            <!-- 사용자 프로필 -->
+            <androidx.cardview.widget.CardView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:cardElevation="0dp"
+                app:cardCornerRadius="100dp"
+                android:layout_gravity="center"
+                android:layout_marginTop="20dp">
+                <ImageView
+                    android:id="@+id/iv_myPage_profile"
+                    android:layout_width="89dp"
+                    android:layout_height="89dp"
+                    android:src="@drawable/ic_friends_profile_default_50"/>
+            </androidx.cardview.widget.CardView>
+
+            <!-- 사용자 닉네임 -->
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="웁스팀입니다"
+                style="@style/H3"
+                android:textColor="@color/Black_33"
+                android:layout_gravity="center"
+                android:layout_marginTop="14dp"/>
+
+            <!-- 일반 코멘트 -->
+            <LinearLayout
+                android:id="@+id/lLayout_myPage_comment_default"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:gravity="center"
+                android:visibility="gone"
+                android:background="@drawable/all_radius_12"
+                android:backgroundTint="@color/Color_EA"
+                android:layout_marginTop="20dp"
+                android:layout_marginStart="16dp"
+                android:layout_marginEnd="16dp"
+                android:paddingTop="12dp"
+                android:paddingBottom="12dp">
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/ic_comment_default_16"
+                    android:layout_marginEnd="8dp"/>
+                <TextView
+                    android:id="@+id/tv_myPage_comment_default"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="웁스팀입니다님 오늘 하루도 좋은 하루 보내세요!"
+                    style="@style/Button2"
+                    android:textColor="@color/Main_500"/>
+            </LinearLayout>
+
+            <!-- Tip성 코멘트 -->
+            <LinearLayout
+                android:id="@+id/lLayout_myPage_comment_tip"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:gravity="center"
+                android:visibility="gone"
+                android:background="@drawable/all_radius_12"
+                android:backgroundTint="@color/Yellow_Light"
+                android:layout_marginTop="20dp"
+                android:layout_marginStart="16dp"
+                android:layout_marginEnd="16dp"
+                android:paddingTop="12dp"
+                android:paddingBottom="12dp">
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/ic_comment_tip_12"
+                    android:layout_marginEnd="8dp"/>
+                <TextView
+                    android:id="@+id/tv_myPage_comment_tip"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="자기 전 5분 명상 후 내일 물건을 챙겨봐요!"
+                    style="@style/Button2"
+                    android:textColor="@color/Yellow_Dark"/>
+            </LinearLayout>
+
+            <!-- 공지성 코멘트 -->
+            <LinearLayout
+                android:id="@+id/lLayout_myPage_comment_notice"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:gravity="center"
+                android:background="@drawable/all_radius_12"
+                android:backgroundTint="@color/Red_Light"
+                android:layout_marginTop="20dp"
+                android:layout_marginStart="16dp"
+                android:layout_marginEnd="16dp"
+                android:paddingTop="12dp"
+                android:paddingBottom="12dp">
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/ic_comment_notice_16"
+                    android:layout_marginEnd="8dp"/>
+                <TextView
+                    android:id="@+id/tv_myPage_comment_notice"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="[공지사항] 2024.04.08 구글 플레이 스토어 출시"
+                    style="@style/Button2"
+                    android:textColor="@color/Red_Medium"/>
+            </LinearLayout>
+
+            <!-- 일반 박스  -->
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:background="@drawable/all_radius_12"
+                android:backgroundTint="@color/Gray_50"
+                android:layout_marginTop="22dp"
+                android:layout_marginStart="16dp"
+                android:layout_marginEnd="16dp">
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/myPage_default"
+                    style="@style/H4"
+                    android:textColor="@color/Gray_400"
+                    android:layout_marginTop="13dp"
+                    android:layout_marginStart="22dp"/>
+
+                <!-- 계정 관리 탭 -->
+                <LinearLayout
+                    android:id="@+id/lLayout_myPage_account"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal"
+                    android:paddingTop="11dp"
+                    android:paddingEnd="21dp"
+                    android:paddingStart="32dp"
+                    android:paddingBottom="11dp">
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/myPage_account"
+                        style="@style/SubTitle"
+                        android:textColor="@color/Black_33"/>
+                    <View
+                        android:layout_width="0dp"
+                        android:layout_height="0dp"
+                        android:layout_weight="1"/>
+                    <ImageView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:src="@drawable/ic_arrow_right_24"
+                        android:layout_gravity="center|end"/>
+                </LinearLayout>
+
+                <!-- 알림 설정 탭 -->
+                <LinearLayout
+                    android:id="@+id/lLayout_myPage_alarm"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal"
+                    android:paddingTop="11dp"
+                    android:paddingEnd="21dp"
+                    android:paddingStart="32dp"
+                    android:paddingBottom="11dp"
+                    android:layout_marginBottom="16dp">
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/myPage_alarm"
+                        style="@style/SubTitle"
+                        android:textColor="@color/Black_33"/>
+                    <View
+                        android:layout_width="0dp"
+                        android:layout_height="0dp"
+                        android:layout_weight="1"/>
+                    <ImageView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:src="@drawable/ic_arrow_right_24"
+                        android:layout_gravity="center|end"/>
+                </LinearLayout>
+            </LinearLayout>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="16dp"
+                android:layout_marginTop="22dp"
+                android:text="@string/myPage_tag"
+                style="@style/H3"
+                android:textColor="@color/Black"/>
+
+            <!-- 태그 업데이트 준비 중 -->
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:background="@drawable/all_radius_12"
+                android:backgroundTint="@color/Gray_200"
+                android:layout_marginTop="7dp"
+                android:layout_marginStart="16dp"
+                android:layout_marginEnd="16dp"
+                android:paddingTop="9dp"
+                android:paddingStart="9dp"
+                android:paddingBottom="9dp">
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/ic_mypage_tag_lock_40"/>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="16dp"
+                    android:text="@string/myPage_tag_lock"
+                    style="@style/SubTitle"
+                    android:textColor="@color/Gray_400"
+                    android:layout_gravity="center"/>
+            </LinearLayout>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:background="@drawable/all_radius_12"
+                android:backgroundTint="@color/Gray_200"
+                android:layout_marginTop="12dp"
+                android:layout_marginStart="16dp"
+                android:layout_marginEnd="16dp"
+                android:paddingTop="9dp"
+                android:paddingStart="9dp"
+                android:paddingBottom="9dp">
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/ic_mypage_tag_lock_40"/>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="16dp"
+                    android:text="@string/myPage_tag_lock"
+                    style="@style/SubTitle"
+                    android:textColor="@color/Gray_400"
+                    android:layout_gravity="center"/>
+            </LinearLayout>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:background="@drawable/all_radius_12"
+                android:backgroundTint="@color/Gray_200"
+                android:layout_marginTop="12dp"
+                android:layout_marginStart="16dp"
+                android:layout_marginEnd="16dp"
+                android:paddingTop="9dp"
+                android:paddingStart="9dp"
+                android:paddingBottom="9dp">
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/ic_mypage_tag_lock_40"/>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="16dp"
+                    android:text="@string/myPage_tag_lock"
+                    style="@style/SubTitle"
+                    android:textColor="@color/Gray_400"
+                    android:layout_gravity="center"/>
+            </LinearLayout>
+
+            <!-- 로그아웃 -->
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/myPage_logout"
+                style="@style/Button3"
+                android:textColor="@color/Gray_300"
+                android:layout_gravity="center"
+                android:layout_marginTop="22dp"/>
+
+            <!-- 하단 공백 -->
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="100dp"/>
+        </LinearLayout>
+    </ScrollView>
+</LinearLayout>
